adding tchat feature

--- a/src/renderer/components/MyComponent.sass
+++ b/src/renderer/components/MyComponent.sass
@@ -42,4 +42,9 @@ body
         transform: translate(-400px)
   input[type="text"]
     position: fixed
+    margin: 0
+    font-size: 1.5em
+    padding: 1em
+    height: 40px
+    width: 100%
     bottom: 10px
